# alvinai

./: .env.example  .gitignore  docker-compose.override.yml  docker-compose.server.yml  docker-compose.yml  validation_results.csv  validation_results.json
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: celery_app.py  main.py
backend/app/ai/: llm_client.py  pipeline.py  prompt.py  query_classifier.py  reranker.py  retriever.py  structured.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  auth.py  conversations.py  health.py  ingest.py  query.py
backend/app/core/: cache.py  config.py  db.py  metrics.py  security.py
backend/app/evaluation/: ragas_eval.py
backend/app/ingestion/: chunker.py  embedder.py  indexer.py  parser.py  pipeline.py
backend/app/models/: __init__.py  base.py  conversation.py  document.py  feedback.py  user.py
backend/app/schemas/: __init__.py  auth.py  conversation.py  query.py
backend/app/training/: dpo_dataset.py  dpo_trainer.py  experiment_tracker.py  raft_dataset.py  raft_trainer.py  sft_dataset.py  sft_trainer.py
configs/: dpo_config.yaml  raft_config.yaml  sft_config.yaml
docs/: ARCHITECTURE.md  AWQ_VLLM_DEPLOYMENT.md  README.md  RUNPOD_FINETUNING.md  TASKS_V2_9Mar.md  TRAINING_RESULTS.md
experiments/: COMPARISON.md
frontend/: Dockerfile  README.md  package.json  tailwind.config.ts
infra/: README.md
scripts/: README.md  compare_experiments.py  eval_dpo_winrate.py  eval_model.py  eval_raft_checkpoint.py  eval_ragas.py  export_awq.py  generate_eval_from_corpus.py  new_experiment.sh  (+7 more)
(+105 files in other folders)
